--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -11,7 +11,9 @@
     <TextView
         android:layout_width="match_parent"
         android:gravity="center"
+        android:textSize="18dp"
+        android:textStyle="bold"
         android:layout_height="match_parent"
-        android:text="Hello World!"
+        android:text="iZooto Notification Services!"
         />
 </LinearLayout>
